<resources>
    <string name="app_name">Drug store manager</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="remember_me">Ghi nhớ</string>
    <string name="login">Đăng nhập</string>
    <string name="no_account">Bạn chưa có tài khoản?</string>
    <string name="register_instead">Đăng ký</string>
    <string name="text_btn_next">Tiếp theo</string>
    <string name="error_edt_account_null">Vui lòng nhập số điện thoại</string>
    <string name="error_send_otp_from_firebase">Đã có lỗi xảy ra</string>
    <string name="activity_send_otp_confirm_sentOtp_label">Nhập mã xác minh đã được gửi đến\n thiết bị của bạn</string>
    <string name="activity_send_otp_confirm_otp_send_label">Xác thực tài khoản</string>
    <string name="activity_send_otp_request_otp"><u>Gửi lại mã OTP</u></string>
    <string name="error_have_no_internet">Xin vui lòng kiểm tra kết nối mạng</string>
    <string name="activity_add_member_Invalid_format_Phone_number">Sai định dạng số điện thoại</string>
    <string name="activity_send_otp_expired_otp_code">Mã OTP đã hết hiệu lực</string>
    <string name="activity_send_otp_failed_otp_code">Mã OTP không hợp lệ</string>
    <string name="activity_config_account_hint_confirm_password">Xác nhận mật khẩu</string>
    <string name="activity_config_account_text_btn_send">Gửi</string>
    <string name="activity_config_account_alert_config_account_label">Mật khẩu phải có ít nhất 8 ký tự bao gồm cả chữ và số</string>
    <string name="activity_config_account_account_config_label">Thiết Lập mật khẩu</string>
    <string name="error_edt_password_null">Vui lòng nhập mật khẩu</string>
    <string name="error_different_password">Mật khẩu không trùng khớp</string>
    <string name="error_create_user">Đăng ký tài khoản thất bại</string>
    <string name="success_create_user">Đăng ký tài khoản thành công</string>
    <string name="error_empty_phone_password">Số điện thoại và mật khẩu không được để trống</string>
    <string name="error_authentication">Tài khoản không tồn tại</string>
    <string name="error_account_existed">Tài khoản đã tồn tại</string>
    <string name="error_query">Đã có lỗi xảy ra</string>
    <string name="success_login">Đăng nhập thành công</string>
    <string name="error_login">Mật khẩu không hợp lệ</string>
    <string name="logout">Đăng xuất</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="forgot_password_guid">Nhập số điện thoại đã đăng ký, \nhệ thống sẽ gửi mã xác nhận cho bạn.</string>
    <string name="drawer_menu_label_home">Trang chủ</string>
    <string name="drawer_menu_label_settings">Cài đặt</string>
    <string name="drawer_menu_label_logout">Đăng xuất</string>
    <string name="drawer_menu_label_store">Kho thuốc</string>
    <string name="drawer_menu_label_report">Báo cáo</string>
    <string name="drawer_menu_label_sales">Doanh số</string>
    <string name="drawer_menu_label_bill">Hóa đơn</string>
    <string name="drawer_menu_label_contact">Liên hệ với chúng tôi</string>
    <string name="drawer_menu_label_account">Tài khoản</string>
    <string name="profile">Hồ sơ</string>
    <string name="notification">Thông báo</string>
    <string name="sell">Tạo đơn hàng</string>
    <string name="price">Giá tiền:</string>
    <string name="search">Tìm kiếm</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="dialog_agree">Đồng ý</string>
    <string name="confirm_logout_title">Bạn có chắc muốn đăng xuất?</string>
    <string name="name">Tên</string>
    <string name="quantity">Số lượng</string>
    <string name="id">ID</string>
    <string name="price1">Thành tiền</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="not_exist_medicine">Thuốc không tồn tại</string>
    <string name="medicine_name">Tên thuốc</string>
    <string name="medicine_price">Giá thuốc</string>
    <string name="medicine_description">Mô tả thuốc</string>
    <string name="medicine_type">Số lượng</string>
    <string name="add_medicine">Thêm thuốc</string>
    <string name="empty_medicine_name">Bạn chưa điền tên thuốc</string>
    <string name="history_bill">Hóa đỡ xuất nhập kho</string>
    <string name="analysis">Thống kê</string>
    <string name="total_sales">TỔNG GIÁ TRỊ ĐƠN HÀNG: </string>
    <string name="add_medicine_to_sell">Thêm thuốc vào đơn hàng thành công</string>
    <string name="payment">Thanh toán</string>
</resources>