<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/dot_background">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_back_gray" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="true"
            style="@style/TextBoldBlueDark"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:textColor="@color/blue_text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/size_25"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/TextBoldBlueDark"
            android:text="@string/cancel"
            android:visibility="gone"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/profilePrimaryDark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginHorizontal="@dimen/size_20"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="@dimen/size_30"
        android:backgroundTint="@color/cv_background_color"
        app:cardElevation="@dimen/size_2"
        app:cardCornerRadius="@dimen/size_14">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/size_6"
                app:layout_constraintEnd_toEndOf="parent"
                android:weightSum="6">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/header_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="@dimen/text_size_12"
                        android:text="@string/medicine_name"
                        android:textColor="@color/black"
                        style="@style/TextBoldBlueDark" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/header_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/quantity"
                        android:textSize="@dimen/text_size_12"
                        android:textColor="@color/black"
                        style="@style/TextBoldBlueDark" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/header_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/price1"
                        android:textSize="@dimen/text_size_12"
                        android:textColor="@color/black"
                        style="@style/TextBoldBlueDark"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_15"
                android:backgroundTint="@color/cv_background_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_header"
                app:layout_constraintVertical_bias="0.0" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:id="@+id/add_medicine"
                android:layout_marginTop="@dimen/size_20"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                app:layout_constraintTop_toBottomOf="@id/rcv_detail"
                app:layout_constraintStart_toStartOf="@id/rcv_detail">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_add_medicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_medicine"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/TextNormalBlueDark"
                    android:textColor="@color/blue_text"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_16"
                    android:layout_height="@dimen/size_16"
                    app:layout_constraintStart_toEndOf="@id/tv_add_medicine"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/size_10"
                    app:srcCompat="@drawable/ic_add"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/guildLine"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/size_10"
                android:layout_height="@dimen/size_1"
                android:background="@color/black"
                android:layout_marginTop="@dimen/size_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_medicine"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/size_15"
                app:layout_constraintTop_toBottomOf="@id/guildLine"
                android:layout_marginTop="@dimen/size_15"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    android:id="@+id/tv_title_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/total_sales"
                    style="@style/TextNormalBlueDark"
                    android:textSize="@dimen/text_size_12"
                    android:textColor="@color/blue_text"
                    />
                <TextView
                    android:id="@+id/total_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tv_title_sales"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextBoldBlueDark"
                    android:textSize="@dimen/text_size_11"
                    android:textStyle="italic"
                    android:textColor="@color/blue_text"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_medicine"
        android:layout_width="@dimen/size_130"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sell"
        android:textColor="@color/white"
        android:textAppearance="@style/TextNormalBlueDark"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_12"
        android:layout_marginBottom="@dimen/size_40"
        style="@style/ButtonBlue"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_payment"
        android:layout_width="@dimen/size_130"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:text="@string/payment"
        android:textColor="@color/white"
        android:textAppearance="@style/TextNormalBlueDark"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_12"
        android:layout_marginBottom="@dimen/size_40"
        style="@style/ButtonBlue"/>


</androidx.constraintlayout.widget.ConstraintLayout>